--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "browser-sync start --server --files '*'"
+    "start": "browser-sync start --server source --files '*'"
   },
   "repository": {
     "type": "git",
